# evolutive_map

./: CMakeLists.txt  Lien vers evolutive_map  README  launch1.launch  launch_empty_gazebo.launch  mapbuilding.txt  myworld.launch  package.xml
launch/: navigation.launch  world.launch
launch/includes/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  gmapping.launch.xml  kobuki.launch.xml  move_base.launch.xml  navfn_global_planner_params.yaml
src/automove/: automove.cpp
src/laser_noise/: laser_noise_node.cpp  launch_laser_noise.launch
src/life_cycle/: Container.cpp  Container.h  detect_containers.cpp  detect_containers.h  life_cycle.cpp
src/maps_saver/: maps_saver_node.cpp
src/odom_noise/: calibrate_odom_noise_node.cpp  launch_calibrate_odom_noise.launch  launch_odom_noise.launch  odom_noise_node.cpp
urdf/: cube.model  cube.urdf  hokuyo.urdf.xacro  kinect.urdf.xacro  kobuki_hexagons_hokuyo.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  turtlebot_gazebo.urdf.xacro
worlds/: lampposts.world  stnazexp.world
